# Playlist2Mp3

./: .dockerignore  .gitignore  Dockerfile  README.MD  main.py  pyproject.toml  render.yaml  tempCodeRunnerFile.py
backend/: app.py  downloader.py  test.py  utils.py
backend/tests/: test_app.py  test_utils.py
frontend/: index.html
frontend/static/css/: about.css  base.css  faq.css  how_it_works.css  index.css  toast.css
frontend/static/js/: progress.js  toast.js
frontend/templates/: about.html  base.html  faq.html  how_it_works.html  index.html
